siteplan navbar spacing fix

--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -223,9 +223,11 @@ footer {
         flex-direction: row;
         width: fit-content;
         flex-basis:50%;
+        justify-content: right;
     }
     .navbar {
         flex-direction: row;
+        
     }
     .navbar li {
         display: inline-block;
